--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -26,6 +26,15 @@ jobs:
         echo "Iniciando login"
         docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
         echo "fin del login"
+        
+    - name: Build Docker Image
+      run: |
+        docker build --tag katamus/docker-graphql:0.0.2 .
+    
+    - name: push Docker Image
+      run: |
+        docker push --tag katamus/docker-graphql:0.0.2
+        
     
 #   - name: Build the Docker image
 #      run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
