--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -33,7 +33,7 @@ jobs:
     
     - name: push Docker Image
       run: |
-        docker push --tag katamus/docker-graphql:0.0.2
+        docker push katamus/docker-graphql:0.0.2
         
     
 #   - name: Build the Docker image
