--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -30,10 +30,12 @@ jobs:
     - name: Build Docker Image
       run: |
         docker build --tag katamus/docker-graphql:0.0.2 .
+        docker build --tag katamus/docker-graphql:latest .
     
     - name: push Docker Image
       run: |
         docker push katamus/docker-graphql:0.0.2
+        docker push katamus/docker-graphql:latest
         
     
 #   - name: Build the Docker image
