--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -30,22 +30,24 @@ jobs:
       env:
         DOCKER_USER: ${{ secrets.DOCKER_USER }}
         DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-        NEW_VERSION: ${{ steps.version.outputs.version }}
       run: |
         echo "Iniciando login"
         docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
         echo "fin del login"
-        echo "New version: $NEW_VERSION!!!!!!!!!"
         
-#    - name: Build Docker Image
-#      run: |
-#        docker build --tag katamus/docker-graphql:0.0.2 .
-#        docker build --tag katamus/docker-graphql:latest .
+    - name: Build Docker Image
+      env:
+        NEW_VERSION: ${{ steps.version.outputs.version }}
+      run: |
+        docker build --tag katamus/docker-graphql:$NEW_VERSION .
+        docker build --tag katamus/docker-graphql:latest .
     
-#    - name: push Docker Image
-#      run: |
-#        docker push katamus/docker-graphql:0.0.2
-#        docker push katamus/docker-graphql:latest
+    - name: push Docker Image
+      env:
+        NEW_VERSION: ${{ steps.version.outputs.version }}
+      run: |
+        docker push katamus/docker-graphql:$NEW_VERSION
+        docker push katamus/docker-graphql:latest
         
     
 #   - name: Build the Docker image
